Fix: Reduced Page Subheading top padding as previous nav-bar corrrection pushed it too low.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ p {
 }
 
 .page-subheading {
-    padding: 35px 2px;
+    padding: 10px 2px;
     text-align: center;
     width: 100%;
     
